--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "*.s": "asm.6502"
+        "*.s": "asm.6502",
+        "*.i": "asm.6502"
     },
     "[asm.6502]": {
         "editor.insertSpaces": false,
