--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Build .prg",
             "type": "shell",
-            "command": "make",
+            "command": "just build",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
